<resources>
    <string name="app_name">VIMFO Card Emulator</string>
    <string name="company_name">VIMFO Emulator</string>

    <string name="card_thumb_description">Company logo</string>

    <string name="no_card_hint">You don\'t seem to have any cards registered! \n\nWhy not just register one by clicking on the + button?</string>

    <!-- In "Create new Card" activity -->
    <string name="email_inst_hint">Intitution email</string>
    <string name="pin_hint">Enter PIN</string>
    <string name="add_card">Create card</string>
    <string name="spinner_prompt">Choose institution</string>
    <string name="create_card_help_text">Enter email you use to log in with desired institution. \nE.g. work email address or student email.</string>
    <string name="pin_help_text">Enter a PIN you received by your institution. \nIf you don\'t have one, please contact your institution.</string>
    <string name="tst_server_error">There has been an issue while communicating with server. Please try again.</string>

    <string-array name="spinner_items">
        <item>Aalborg University</item>
        <item>Fitness World</item>
        <item>KAB</item>
        <item>Other</item>

    </string-array>

    <string name="no_id_tst">No account found. Open application and create an account.</string>

    <!--In "Create new Account" fragment-->
    <string name="email_hint">E-mail</string>
    <string name="pass_hint">Password</string>
    <string name="create_acc_btn_txt">Sign Up</string>
    <string name="loading_msg">Loading, please wait.</string>
    <string name="tst_email_empty">Enter an email!</string>
    <string name="tst_email_long">Email is too long!</string>
    <string name="tst_email_invalid">Email is invalid!</string>
    <string name="tst_pass_empty">Enter a password!</string>
    <string name="tst_pass_short">Password has to be at least 5 characters long.</string>
    <string name="tst_pass_long">Password is too long!</string>

    <!--In single card row-->
    <string name="card_name_desc_txt">User name:</string>
    <string name="card_id_desc_txt">Card number:</string>

    <string name="card_added_tst">Card has been added. YOU\'RE READY TO GO!</string>


</resources>
