<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.filip.cardemulationaau.ui_elements.CreateCardActivity">

    <Spinner
        android:id="@+id/institution_chooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"

        android:entries="@array/spinner_items"

        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:prompt="@string/spinner_prompt"
        />

    <EditText
        android:id="@+id/enter_email_inst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/institution_chooser"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/email_inst_hint"
        android:inputType="textEmailAddress"
        />


    <TextView
        android:id="@+id/create_card_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_email_inst"
        android:layout_margin="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        android:text="@string/create_card_help_text"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/commit_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_card"
        />

    <TextView
        android:id="@+id/pin_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/commit_add"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:hint="@string/pin_help_text"
        android:textSize="18sp"
        />


    <EditText
        android:id="@+id/enter_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_above="@id/pin_help"
        android:layout_margin="10dp"

        android:hint="@string/pin_hint"
        android:inputType="numberPassword"
        />


</RelativeLayout>
