<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.filip.cardemulationaau.ui_elements.CreateCardActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:hint="@string/name_hint"
        android:ems="10"
        android:id="@+id/enter_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/enter_name"
        android:layout_alignParentStart="true"
        android:prompt="@string/spinner_prompt"
        android:entries="@array/spinner_items"
        android:id="@+id/institution_chooser"/>



    <TextView
        android:text="@string/create_card_help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/institution_chooser"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        android:textSize="20dp"

        android:id="@+id/create_card_help"/>

    <Button
        android:text="@string/add_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:id="@+id/commit_add"/>

</RelativeLayout>
